[package]
name = "s2n-quic-crypto"
version = "0.72.0"
description = "Internal crate used by s2n-quic"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.84"
license = "Apache-2.0"
# Exclude corpus files when publishing to crates.io
exclude = ["corpus.tar.gz"]

[features]
default = []
aws-lc-bindgen = ["aws-lc-rs/bindgen"]
fips = ["aws-lc-rs/fips"]
testing = []

[dependencies]
aws-lc-rs = { version = "1.12", features = ["prebuilt-nasm"] }
cfg-if = "1"
lazy_static = "1"
s2n-codec = { version = "=0.72.0", path = "../../common/s2n-codec", default-features = false }
s2n-quic-core = { version = "=0.72.0", path = "../s2n-quic-core", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
hex-literal = "0.4"
insta = { version = "1", features = ["json"] }
s2n-quic-core = { path = "../s2n-quic-core", features = ["testing"] }
