[package]
name = "s2n-quic-h3"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2018"
license = "Apache-2.0"
# this contains an http3 implementation for testing purposes and should not be published
publish = false

[dependencies]
bytes = { version = "1", default-features = false }
futures = "0.3"
h3 = { git = "https://github.com/hyperium/h3" } # TODO: Update once hyperium h3 is in crates.io
s2n-quic = { path = "../s2n-quic", default-features = false }
s2n-quic-core = { version = "0.1", path = "../s2n-quic-core", default-features = false }
