[package]
name = "s2n-quic-h3"
# this in an unpublished internal crate so the version should not be changed
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
# this contains an http3 implementation for testing purposes and should not be published
publish = false

[dependencies]
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
h3 = "0.0.8"
s2n-quic = { path = "../s2n-quic" }
tracing = { version = "0.1", optional = true }

[features]
tracing = ["dep:tracing"]
