[package]
name = "s2n-quic-integration"
version = "0.1.0"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
publish = false

[features]
default = []

[dependencies]
anyhow = "1"
bolero-generator = "0.6"
bytes = { version = "1", default-features = false }
futures = "0.3"
lazy_static = "1"
s2n-quic = { path = "../s2n-quic", features = ["std"] }
s2n-quic-core = { path = "../s2n-quic-core", features = ["std", "testing"] }
s2n-quic-platform = { path = "../s2n-quic-platform" }
tokio = { version = "1.5", features = ["full"] }

[dev-dependencies]
bolero = "0.6"
# The main flume has dependencies which don't have a rolling 6-month MSRV
#
# This fork uses `parking_lot` instead, which does. Since this is only a dev-dependency, it
# shouldn't prevent us from publishing to crates.io.
flume = { git = "https://github.com/camshaft/flume", default-features = false, features = ["async"] }
