[package]
name = "s2n-quic-integration"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2018"
license = "Apache-2.0"
# this only contains internal tests and should not be published
publish = false

[features]
default = []

[dependencies]
anyhow = "1"
bolero-generator = "0.6"
bytes = { version = "1", default-features = false }
futures = "0.3"
lazy_static = "1"
s2n-quic = { path = "../s2n-quic" }
s2n-quic-core = { path = "../s2n-quic-core", features = ["std", "testing"] }
s2n-quic-platform = { path = "../s2n-quic-platform" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
bolero = "0.6"
flume = { version = "0.10", features = ["async"] }
