[package]
name = "s2n-quic-platform"
version = "0.2.1"
description = "Internal crate used by s2n-quic"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2018"
license = "Apache-2.0"
# Exclude corpus files when publishing to crates.io
exclude = ["corpus.tar.gz"]

[features]
default = ["std", "tokio-runtime", "wipe"]
std = ["s2n-quic-core/std", "socket2", "lazy_static"]
testing = ["std", "generator", "futures/std", "io-testing"] # Testing allows to overwrite the system time
io-testing = ["bach"]
generator = ["bolero-generator", "s2n-quic-core/generator"]
tokio-runtime = ["futures", "pin-project", "tokio"]
wipe = ["zeroize"]

[dependencies]
bach = { version = "0.0.5", optional = true }
bolero-generator = { version = "0.6", default-features = false, optional = true }
cfg-if = "1"
errno = "0.2"
futures = { version = "0.3", default-features = false, features = ["async-await"], optional = true }
lazy_static = { version = "1", optional = true }
pin-project = { version = "1", optional = true }
s2n-quic-core = { version = "=0.2.1", path = "../s2n-quic-core", default-features = false }
socket2 = { version = "0.4", features = ["all"], optional = true }
tokio = { version = "1", default-features = false, features = ["macros", "net", "rt", "time"], optional = true }
zeroize = { version = "1", default-features = false, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
bach = { version = "0.0.5" }
bolero = "0.6"
bolero-generator = { version = "0.6", default-features = false }
futures = { version = "0.3", features = ["std"] }
insta = "1"
s2n-quic-core = { path = "../s2n-quic-core", features = ["testing"] }
tokio = { version = "1", features = ["full"] }
